# realpath

./: .atom-build.yml  .gitignore  AUTHORS  Makefile.am  README.md  build.sh  configure.ac
man/: local.mk  realpath.1.ronn
src/: local.mk  realpath.c
